chore(pages): fix spacing and change header text

--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ p {
       2px 2px 0 #ED2224;
     font-family: 'collegeregular', Times New Roman, serif;
     font-size: 28pt;
+    letter-spacing: 2pt;
 }
 
 #header .navbar-right {
